# conversational-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  chat.py  chat.sh  config.gin  dataset.py  docker-train.sh  docker.py  docker.sh  entrypoint.sh  index.html  model.py  models.py  pyproject.toml  requirements.dev.txt  requirements.txt  run_gpt2.py  run_lm_finetuning.py  serve.py  serve.sh  setup.cfg  t5.sh  t5_model.py  tasks.py  test.py  train.old.py  train.py  train.sh
chats/: README.md  chat_2020-04-07T18:19:43.560416-06:00.gin  chat_2020-04-07T18:19:43.560416-06:00.txt  chat_2020-04-07T19:36:21.648959-06:00.gin  chat_2020-04-07T19:36:21.648959-06:00.txt  chat_2020-04-07T20:08:56.695438-06:00.gin  chat_2020-04-07T20:08:56.695438-06:00.txt  chat_2020-04-07T20:27:45.072823-06:00.gin  chat_2020-04-07T20:27:45.072823-06:00.txt  chat_2020-04-07T20:29:58.961706-06:00.gin  chat_2020-04-07T20:29:58.961706-06:00.txt  chat_2020-04-08T18:35:50.548748-06:00.gin  chat_2020-04-08T18:35:50.548748-06:00.txt  chat_2020-04-08T21:29:34.328095-06:00.gin  chat_2020-04-08T21:29:34.328095-06:00.txt  chat_2020-04-08T21:31:42.592703-06:00.gin  chat_2020-04-08T21:31:42.592703-06:00.txt  chat_2020-04-08T22:24:10.726982-06:00.gin  chat_2020-04-08T22:24:10.726982-06:00.txt  chat_2020-04-08T23:06:23.594232-06:00.gin  chat_2020-04-08T23:26:37.028623-06:00.gin  chat_2020-04-08T23:26:37.028623-06:00.txt  chat_2020-04-09T14:20:38.623121-06:00.gin  chat_2020-04-09T14:20:38.623121-06:00.txt  chat_2020-04-09T14:26:53.873281-06:00.gin  chat_2020-04-09T14:26:53.873281-06:00.txt  chat_2020-04-09T14:29:08.186563-06:00.gin  chat_2020-04-09T14:32:07.339445-06:00.gin  chat_2020-04-09T14:32:07.339445-06:00.txt  chat_2020-04-09T14:36:06.985923-06:00.gin  chat_2020-04-09T14:36:06.985923-06:00.txt  chat_2020-04-09T14:40:02.093940-06:00.gin  chat_2020-04-09T14:40:02.093940-06:00.txt  chat_2020-04-09T14:42:03.152504-06:00.gin  chat_2020-04-09T14:42:03.152504-06:00.txt  chat_2020-04-09T14:43:49.303033-06:00.gin  (+88 more)
(+100 files in other folders)
